Updating index.html

--- a/index.html
+++ b/index.html
@@ -9,20 +9,25 @@
 
   <body>
     <header class="page-header">
-      <div class="container">am.bogoslovskii@gmail.com | Telegram: @bogoslovar |<a href="https://www.facebook.com/artem.bogoslovskii/">Facebook</a></div>
+      <div class="container">
+        <a class="header-email" href="mailto:am.bogoslovskii@gmail.com">am.bogoslovskii@gmail.com |</a>
+        <a class="header-phone" href="tel:+995568417694">+995 568 41 76 94 |</a>
+        <a class="header-telegram" title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
+        <a href="https://www.facebook.com/artem.bogoslovskii/">Facebook |</a></div>
     </header>
 
     <section class="hero-image">
       <div class="container">
       <h1 class="heading">Atem Bogoslovskii</h1>
-      <p>Digital producer | Junior frontend</p></div>
+      <p>Digital producer | Junior front-end</p></div>
     </section>
 
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Hey all!</h2>
+      <figure class=user-image> <img src="files/artem.jpg" width="288" heights="936" alt="Hello... it's me..."> </figure>
       <h3>I'm Artem and I love Web. Really, it's my passion!</h3>
-      <p>Born in Moscow, live now in Tbilisi. Worked as a journilst, account manager, project manager, digital producer. And now also as a junior frontend.</p>
+      <p>Born in Moscow, live now in Tbilisi. Worked as a journilst, account manager, project manager, digital producer. And now also as a junior front-end.</p>
       <h3>Web-production with a trustful team.</h3>
       <p>Let's do this!</p>
     </div>
@@ -32,8 +37,12 @@
       <div class="container">
       <h2 class="subheading">My projects</h2>
 
-      <h3>Сайт инструктора Кекса</h3>
-      <p>Небольшой лендинг о школе для начинающих.</p>
+      <figure class="project-image">
+        <img src="files/project.jpg" width="918" height="526" alt="Сайт инструктора Кекса">
+      </figure>
+      <h3>Instructor Keks's site</h3>
+      <p>Small landing for beginners.</p>
+      <a class="button" href="source/keks_project/index.html">Open</a>
 
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
@@ -42,7 +51,11 @@
 
     <footer class="page-footer">
       <div class="container">
-      am.bogoslovskii@gmail.com | Telegram: @bogoslovar</div>
+        <a class="footer-email" href="mailto:am.bogoslovskii@gmail.com">am.bogoslovskii@gmail.com |</a>
+        <a class="footer-phone" href="tel:+995568417694">+995 568 41 76 94 |</a>
+        <a class="footer-telegram" title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
+        <a href="https://www.facebook.com/artem.bogoslovskii/">Facebook |</a>
+      </div>
     </footer>
   </body>
 </html>
