--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <a class="header-email" href="mailto:am.bogoslovskii@gmail.com">am.bogoslovskii@gmail.com |</a>
         <a class="header-phone" href="tel:+995568417694">+995 568 41 76 94 |</a>
-        <a class="header-telegram" title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
+        <a title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
         <a href="https://www.facebook.com/artem.bogoslovskii/">Facebook |</a></div>
     </header>
 
@@ -53,7 +53,7 @@
       <div class="container">
         <a class="footer-email" href="mailto:am.bogoslovskii@gmail.com">am.bogoslovskii@gmail.com |</a>
         <a class="footer-phone" href="tel:+995568417694">+995 568 41 76 94 |</a>
-        <a class="footer-telegram" title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
+        <a title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
         <a href="https://www.facebook.com/artem.bogoslovskii/">Facebook |</a>
       </div>
     </footer>
