--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700|Old+Standard+TT&display=swap&subset=cyrillic" rel="stylesheet"
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-dark.css">
     <title>Bogoslovar's Digital production</title>
   </head>
 
@@ -12,7 +12,7 @@
       <div class="container">
         <a class="header-email" href="mailto:am.bogoslovskii@gmail.com">am.bogoslovskii@gmail.com |</a>
         <a class="header-phone" href="tel:+995568417694">+995 568 41 76 94 |</a>
-        <a title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
+        <a class="header-telegram" title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
         <a href="https://www.facebook.com/artem.bogoslovskii/">Facebook |</a></div>
     </header>
 
@@ -31,6 +31,16 @@
       <h3>Web-production with a trustful team.</h3>
       <p>Let's do this!</p>
     </div>
+    <div class="skills">
+      <h3>My skills</h3>
+      <dl class="skills-list">
+        <dt class="skill-project">Project management</dt>
+        <dd class="level"><div style="width: 100%";>100%</div></dd>
+        <dt class="skill-html">HTML</dt>
+        <dd class="level"><div style="width: 60%;">60%</div></dd>
+        <dt class="skill-css">CSS</dt>
+        <dd class="level"><div style="width: 20%;">20%</div></dd>
+      </dl>
     </section>
 
     <section class="portfolio">
@@ -53,7 +63,7 @@
       <div class="container">
         <a class="footer-email" href="mailto:am.bogoslovskii@gmail.com">am.bogoslovskii@gmail.com |</a>
         <a class="footer-phone" href="tel:+995568417694">+995 568 41 76 94 |</a>
-        <a title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
+        <a class="footer-telegram" title="Telegram is my favourite one, but feel free to use WhatsApp too, it's connected to my phone number.">Telegram: @bogoslovar |</a>
         <a href="https://www.facebook.com/artem.bogoslovskii/">Facebook |</a>
       </div>
     </footer>
